Added index.html, script.js, and style.css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main class="container" role="main">
     <header class="brand">
-      <div class="brand__logo" aria-hidden="true">mw</div>
+      <div class="brand__logo" aria-hidden="true">logo</div>
       <div>
         <h1>Welcome to <span class="accent">Envirolingo</span></h1>
         <p class="subtitle">Learn and practice sustainability with interactive, gamified challenges.</p>
