--- a/login_2.html
+++ b/login_2.html
@@ -1,197 +1,278 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EcoSarthi – Login</title>
-  <style>
-    /* --- ROOT THEME --- */
-    :root {
-      --brand: #00796B;
-      --brand-600: #00897B;
-      --brand-800: #004d40;
-      --primary-green: #0f9d58;
-      --secondary-green: #43a047;
-      --bg: #0d1217;
-      --text: #f0f4f9;
-      --muted: #a0acba;
-      --placeholder: #6a7c8c;
-      --card: rgba(20, 30, 30, 0.85);
-      --border: #2c3e50;
-      --shadow: 0 12px 36px rgba(0, 0, 0, 0.45);
-      --radius: 16px;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>EcoSarthi – Login</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+<style>
+  :root {
+    --primary-green: #0f9d58;
+    --secondary-green: #43a047;
+    --dark-green: #1b5e20;
+    --accent-yellow: #ffeb3b;
+    --light-yellow: #fdd835;
+    --white: #ffffff;
+    --glass-bg: rgba(255, 255, 255, 0.12);
+    --border: rgba(255, 255, 255, 0.25);
+    --text-light: #f1f1f1;
+    --placeholder: #bcd4c6;
+    --bg-dark: #121212;
+    --bg-light: linear-gradient(135deg, var(--primary-green), var(--secondary-green));
+  }
 
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: var(--bg-light);
+    transition: background 0.3s ease;
+    overflow: hidden;
+  }
 
-    body {
-      font-family: 'Inter', sans-serif;
-      color: var(--text);
-      height: 100vh;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      background: linear-gradient(135deg, var(--primary-green), var(--secondary-green));
-    }
+  body.dark-mode {
+    background: var(--bg-dark);
+    color: var(--white);
+  }
 
-    /* LEFT PANEL */
-    .left {
-      background: url('https://img.freepik.com/free-vector/flat-design-eco-friendly-background_23-2150520981.jpg?w=740') center/cover no-repeat;
-      position: relative;
-    }
-    .overlay {
-      position: absolute;
-      inset: 0;
-      background: rgba(0, 50, 40, 0.6);
-    }
-    .left h1 {
-      position: absolute;
-      bottom: 40px;
-      left: 40px;
-      font-size: 42px;
-      font-weight: 700;
-      line-height: 1.2;
-    }
+  /* Login Card */
+  .login-card {
+    background: var(--glass-bg);
+    backdrop-filter: blur(14px);
+    border: 1px solid var(--border);
+    border-radius: 20px;
+    box-shadow: 0 12px 36px rgba(0, 0, 0, 0.35);
+    padding: 40px;
+    width: 100%;
+    max-width: 400px;
+    text-align: center;
+    position: relative;
+    z-index: 5;
+    animation: fadeIn 1.2s ease-out;
+  }
 
-    /* RIGHT PANEL */
-    .right {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: rgba(13, 18, 23, 0.9);
-    }
+  .brand__logo {
+    font-size: 50px;
+    margin-bottom: 15px;
+    text-shadow: 0 0 12px rgba(0,0,0,0.4);
+    animation: float 4s ease-in-out infinite;
+  }
 
-    .login-card {
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      padding: 40px;
-      width: 100%;
-      max-width: 380px;
-      box-shadow: var(--shadow);
-      backdrop-filter: blur(12px);
-      display: grid;
-      gap: 24px;
-      text-align: center;
-    }
+  .login-card h2 {
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 8px;
+    background: linear-gradient(45deg, var(--accent-yellow), var(--light-yellow));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    color: transparent;
+  }
 
-    .brand__logo {
-      width: 70px;
-      height: 70px;
-      margin: 0 auto 10px;
-      border-radius: 50%;
-      background: linear-gradient(135deg, var(--brand), var(--brand-600));
-      display: grid;
-      place-items: center;
-      font-size: 28px;
-      font-weight: 700;
-      color: white;
-      box-shadow: 0 0 20px rgba(0, 137, 123, 0.6);
-    }
+  .subtitle {
+    font-size: 15px;
+    color: var(--text-light);
+    margin-bottom: 20px;
+  }
 
-    .login-card h2 {
-      margin: 0;
-      font-size: 26px;
-      font-weight: 700;
-    }
-    .subtitle {
-      font-size: 14px;
-      color: var(--muted);
-    }
+  .input-group {
+    text-align: left;
+    margin-bottom: 18px;
+  }
+  .input-group label {
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--light-yellow);
+  }
+  .input-group input, .input-group select {
+    width: 100%;
+    padding: 14px;
+    margin-top: 6px;
+    border: none;
+    border-radius: 12px;
+    background: rgba(255, 255, 255, 0.15);
+    color: var(--white);
+    font-size: 15px;
+    transition: all 0.3s ease;
+  }
+  .input-group input::placeholder { color: var(--placeholder); }
+  .input-group input:focus, .input-group select:focus {
+    outline: none;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 0 0 3px rgba(253, 216, 53, 0.4);
+  }
 
-    .input-group {
-      text-align: left;
-      display: grid;
-      gap: 6px;
-    }
-    .input-group label {
-      font-size: 13px;
-      color: var(--muted);
-    }
-    .input-group input {
-      width: 100%;
-      padding: 14px;
-      border: none;
-      border-radius: var(--radius);
-      background: rgba(0, 184, 148, 0.15);
-      color: var(--text);
-      font-size: 15px;
-      transition: all .25s ease;
-    }
-    .input-group input::placeholder {
-      color: var(--placeholder);
-    }
-    .input-group input:focus {
-      outline: none;
-      background: rgba(0, 184, 148, 0.25);
-      box-shadow: 0 0 0 3px rgba(0, 184, 148, 0.35);
-    }
+  /* Role selection */
+  .role-toggle {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  .role-toggle button {
+    flex: 1;
+    margin: 0 5px;
+    padding: 12px;
+    border: none;
+    border-radius: 20px;
+    background: var(--accent-yellow);
+    color: var(--dark-green);
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.3s ease;
+  }
+  .role-toggle button.active {
+    background: var(--light-yellow);
+    transform: scale(1.05);
+  }
 
-    .btn {
-      border: none;
-      cursor: pointer;
-      padding: 14px 20px;
-      border-radius: var(--radius);
-      font-size: 15px;
-      font-weight: 600;
-      transition: all .25s ease;
-    }
-    .btn-primary {
-      background: linear-gradient(135deg, var(--brand), var(--brand-600));
-      color: white;
-      box-shadow: 0 8px 20px rgba(0, 121, 107, 0.4);
-    }
-    .btn-primary:hover {
-      filter: brightness(1.1);
-      box-shadow: 0 10px 26px rgba(0, 121, 107, 0.6);
-    }
+  /* Login button */
+  .btn {
+    display: inline-block;
+    width: 100%;
+    padding: 14px;
+    border: none;
+    border-radius: 30px;
+    background: var(--accent-yellow);
+    color: var(--dark-green);
+    font-weight: bold;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    margin-top: 5px;
+    box-shadow: 0px 6px 16px rgba(0,0,0,0.25);
+  }
+  .btn:hover {
+    background: var(--light-yellow);
+    transform: translateY(-3px) scale(1.03);
+    box-shadow: 0px 10px 22px rgba(0,0,0,0.35);
+  }
 
-    .note {
-      font-size: 14px;
-      color: var(--muted);
-    }
-    .note a {
-      color: var(--brand-600);
-      text-decoration: none;
-      font-weight: 600;
-    }
+  .note {
+    font-size: 14px;
+    color: var(--text-light);
+    margin-top: 16px;
+  }
+  .note a {
+    color: var(--accent-yellow);
+    text-decoration: none;
+    font-weight: 600;
+  }
 
-    /* RESPONSIVE */
-    @media (max-width: 860px) {
-      body {
-        grid-template-columns: 1fr;
-      }
-      .left { display: none; }
-    }
-  </style>
+  /* Floating icons */
+  .floating-icon {
+    position: absolute;
+    width: 50px;
+    opacity: 0.4;
+    animation: float 20s infinite linear;
+    z-index: 1;
+  }
+  .icon1 { top: 10%; left: 5%; animation-duration: 25s; }
+  .icon2 { top: 30%; right: 10%; animation-duration: 30s; width: 60px; }
+  .icon3 { bottom: 15%; left: 20%; animation-duration: 35s; width: 45px; }
+  .icon4 { top: 60%; right: 25%; animation-duration: 28s; width: 55px; }
+
+  @keyframes fadeIn { from {opacity: 0; transform: translateY(30px);} to {opacity: 1; transform: translateY(0);} }
+  @keyframes float {
+    0% { transform: translateY(0) rotate(0deg); }
+    50% { transform: translateY(-20px) rotate(180deg); }
+    100% { transform: translateY(0) rotate(360deg); }
+  }
+
+  /* Dark mode toggle */
+  .dark-toggle {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background: var(--accent-yellow);
+    border: none;
+    padding: 10px 18px;
+    border-radius: 25px;
+    cursor: pointer;
+    font-weight: bold;
+    color: var(--dark-green);
+    z-index: 1000;
+    transition: 0.3s ease;
+  }
+  .dark-toggle:hover { background: var(--light-yellow); }
+
+  body.dark-mode .login-card {
+    background: rgba(255,255,255,0.08);
+    border: 1px solid rgba(255,255,255,0.2);
+  }
+  body.dark-mode input::placeholder { color: #ccc; }
+</style>
 </head>
 <body>
-  <!-- LEFT ECO PANEL -->
-  <div class="left">
-    <div class="overlay"></div>
-    <h1>EcoSarthi<br>Learn • Play • Sustain</h1>
+
+<!-- Floating Icons -->
+<img src="https://img.icons8.com/emoji/48/deciduous-tree.png" class="floating-icon icon1">
+<img src="https://img.icons8.com/emoji/48/recycling-symbol.png" class="floating-icon icon2">
+<img src="https://img.icons8.com/emoji/48/seedling.png" class="floating-icon icon3">
+<img src="https://img.icons8.com/emoji/48/water-wave.png" class="floating-icon icon4">
+
+<!-- Dark Mode Toggle -->
+<button id="darkToggle" class="dark-toggle">🌙</button>
+
+<!-- Login Card -->
+<div class="login-card">
+  <div class="brand__logo">🌿</div>
+  <h2>Welcome Back</h2>
+  <p class="subtitle">Login to continue your Eco journey 🌱</p>
+
+  <!-- Role Selection -->
+  <div class="role-toggle">
+    <button class="role-btn active" data-role="student">Student</button>
+    <button class="role-btn" data-role="teacher">Teacher</button>
   </div>
 
-  <!-- RIGHT LOGIN PANEL -->
-  <div class="right">
-    <div class="login-card">
-      <div class="brand__logo">🌿</div>
-      <h2>Welcome Back</h2>
-      <p class="subtitle">Login to continue your eco-journey</p>
-
-      <form>
-        <div class="input-group">
-          <label for="email">Email</label>
-          <input type="email" id="email" placeholder="Enter your email">
-        </div>
-        <div class="input-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" placeholder="Enter your password">
-        </div>
-        <button class="btn btn-primary" type="submit">Login</button>
-      </form>
-
-      <p class="note">Don’t have an account? <a href="#">Sign up</a></p>
+  <form>
+    <div class="input-group">
+      <label for="email">Email</label>
+      <input type="email" id="email" placeholder="Enter your email">
     </div>
-  </div>
+    <div class="input-group">
+      <label for="password">Password</label>
+      <input type="password" id="password" placeholder="Enter your password">
+    </div>
+    <button class="btn" type="submit">Login</button>
+  </form>
+
+  <p class="note">Don’t have an account? <a href="#">Sign up</a></p>
+</div>
+
+<script>
+  // Dark Mode Toggle
+  const darkToggle = document.getElementById('darkToggle');
+  darkToggle.addEventListener('click', () => {
+    document.body.classList.toggle('dark-mode');
+    darkToggle.textContent = document.body.classList.contains('dark-mode') ? "☀️" : "🌙";
+  });
+
+  // Role Selection
+  const roleButtons = document.querySelectorAll('.role-btn');
+  let selectedRole = 'student';
+  roleButtons.forEach(btn => {
+    btn.addEventListener('click', () => {
+      roleButtons.forEach(b => b.classList.remove('active'));
+      btn.classList.add('active');
+      selectedRole = btn.dataset.role;
+      console.log("Selected Role:", selectedRole);
+    });
+  });
+
+  // Form Submit Demo
+  const form = document.querySelector('form');
+  form.addEventListener('submit', e => {
+    e.preventDefault();
+    alert(`Logging in as ${selectedRole} with email: ${document.getElementById('email').value}`);
+  });
+</script>
+
 </body>
 </html>
