--- a/landing.html
+++ b/landing.html
@@ -286,7 +286,7 @@
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#how-it-works">How It Works</a></li>
-      <li><a href="#">Login</a></li>
+      <li><a href="roleSelectionpage.html">Login</a></li>
     </ul>
   </nav>
 
